# ATHBA

./: .env.example  .gitignore  DIVERGENCE.md  PROJECT_STATE.md  README.md  Specification Document.txt  design_principles.md  dummy_chat  manage.py  pyproject.toml  pytest.ini  run_scripts
.helpful_setup_files/: mongo_user_setup
athba/: asgi.py  settings.py  urls.py  wsgi.py
core/: api.py  urls.py
core/agents/: agent_generator.py  architect_agent.py  developer_agent.py  interfaces.py  pm_agent.py  rd_agent.py  spec_agent.py  tester_agent.py
core/config/: anthropic.py  openai.py
core/controllers/: project_controller.py
core/dataclasses/: agent_log.py  agent_message.py  chat_message.py  code_snippet.py  history_entry.py  history_query.py  llm_evaluation.py  llm_intent.py  priority.py  project.py  project_quota.py  projses.py  severity.py  shared_state.py  snippet_in.py  snippet_out.py  ticket_label.py  ticket_model.py
core/endpoints/: activity.py  chat.py  chat_TBD.py  config.py  dashboard.py  (+5 more)
docs/: ARCHITECT_AGENT.md  CHAT_IMPROVEMENTS.md  CLOUD_SETUP.md  CODE_REVIEW_CHAT_IMPROVEMENTS.md  DEVELOPER_AGENT.md  GIT_INTEGRATION.md  LLM_ESCALATION.md  PHASE_1A_SUMMARY.md  PHASE_1B_SUMMARY.md  PHASE_1C_COMPLIANCE_REPORT.md  PHASE_1C_SUMMARY.md  SETUP.md  SPEC_TO_TICKETS_WORKFLOW.md  TDD_WORKFLOW.md  TESTING.md
http_requests/: hello_ai.http
llm_service/: llm_server.py  llm_server_management.py  llm_server_state.py  model_registry.py
run scripts/: commercial_agentic_ai.bat  labelled_data_generator.py  llm_service_run.bat  run_mongodb.bat  serve_llm.sh  serve_web.sh  user_prompt_generator.py
templates/: base.html  test.html
tests/: conftest.py  test_markdown_renderer.py  test_spec_repo_normalize.py
(+105 files in other folders)
